<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/MyMargin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.huminskiy1325.creptography1.Activities.CaesarActivity">


    <TextView
        android:id="@+id/title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_input"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_input"
        android:layout_marginTop="5dp"
        android:ems="12"
        android:hint="@string/input_text"
        android:inputType="textPersonName" />

    <ImageButton
        android:id="@+id/cleanInformation"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/editText"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="40dp"
        android:layout_toRightOf="@+id/editText"
        android:background="@drawable/rectangle_rounded_all"
        android:scaleType="fitCenter"
        android:src="@drawable/x_cross" />

    <TextView
        android:id="@+id/input_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_marginTop="20dp"
        android:text="@string/title_key"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/input_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_textview"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/input_key"
        android:inputType="numberSigned" />

    <LinearLayout
        android:id="@+id/buttonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_key"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/encrept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/button_encrypt" />

        <Button
            android:id="@+id/discrypt_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/button_discrypt" />
    </LinearLayout>

    <TextView
        android:id="@+id/file_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLinearLayout"
        android:layout_marginTop="20dp"
        android:text="@string/tv_input_file_name"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/file_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/file_name_tv"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/file_name_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/file_name_input"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp">

        <Button
            android:id="@+id/write_to_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/button_write_to_file" />

        <Button
            android:id="@+id/read_from_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/button_read_from_file" />
    </LinearLayout>

</RelativeLayout>
