<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/MyMargin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.huminskiy1325.creptography1.Activities.CaesarActivity">


    <TextView
        android:id="@+id/title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/title_input"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <ImageButton
        android:id="@+id/cleanInformation"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/title_input"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_rounded_all"
        android:scaleType="fitCenter"
        android:src="@drawable/x_cross" />

    <TextView
        android:id="@+id/input_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_marginTop="20dp"
        android:text="@string/title_key_pvch"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/input_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/input_key"
        android:inputType="numberSigned" />

    <!--<TextView-->
    <!--android:text="@string/title_key_gamma"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/input_key"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:textSize="20dp"-->
    <!--android:id="@+id/input_key_gamma"-->
    <!--android:textColor="@android:color/black"/>-->

    <!--<EditText-->
    <!--android:hint="@string/input_key"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:inputType="numberSigned"-->
    <!--android:ems="10"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:id="@+id/editText_key_gamma"-->
    <!--android:layout_below="@+id/input_key_gamma"-->
    <!--android:layout_alignParentStart="true" />-->


    <LinearLayout
        android:id="@+id/buttonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_key"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/encrept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/button_encrypt" />

        <Button
            android:id="@+id/discrypt_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/button_discrypt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/file_name_input"
        android:layout_marginTop="5dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/write_to_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/button_write_to_file" />

        <Button
            android:id="@+id/read_from_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/button_read_from_file" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/cleanInformation"
        android:ems="12"
        android:hint="@string/input_text"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/file_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonLinearLayout"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/file_name_hint" />


</RelativeLayout>